--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@fullcalendar/core": "^6.1.4",
-        "@fullcalendar/daygrid": "^6.1.4"
+        "@fullcalendar/daygrid": "^6.1.4",
+        "@fullcalendar/interaction": "^6.1.4"
     }
 }
