日付ずれるの修正

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dependencies": {
         "@fullcalendar/core": "^6.1.4",
         "@fullcalendar/daygrid": "^6.1.4",
-        "@fullcalendar/interaction": "^6.1.4"
+        "@fullcalendar/interaction": "^6.1.4",
+        "@fullcalendar/list": "^6.1.4",
+        "@fullcalendar/timegrid": "^6.1.4"
     }
 }
